<?xml version="1.0"?>
<package format="2">
  <name>blm6191_pure_pursuit_planner</name>
  <version>0.0.0</version>
  <description>A local planner plugin implementing the Pure Pursuit path tracking algorithm for the BLM6191 course.</description>

  <maintainer email="mtastan@todo.todo">mtastan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <base_local_planner plugin="${prefix}/blm6191_pure_pursuit_planner_plugin.xml" />
    <pluginlib>
        <class type="blm6191_pure_pursuit_planner/PurePursuitPlanner"
               base_class_type="nav_core::BaseLocalPlanner" />
    </pluginlib>
  </export>
</package>